--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -82,6 +82,12 @@ html {
     left: 0;
 }
 
+.container {
+    max-width: 90% !important;
+    padding-right: 0;
+    min-height: 500px;
+}
+
 .main-title {
     font-size: 33px;
     text-align: center;
@@ -106,6 +112,7 @@ html {
     display: grid;
     grid-template-columns: 2fr 3fr;
     margin: 50px 0;
+    min-width: 250px;
 }
 
 .relawan-detail img {
@@ -132,11 +139,11 @@ table {
     margin-right: 0;
 }
 
-#main-content{
+#main-content {
     padding: 20px 0;
 }
 
-#main-content h1{
+#main-content h1 {
     font-size: 30px;
     text-align: center;
     padding: 5px;
@@ -185,10 +192,68 @@ table {
     .app-bar .app-bar__brand h1 {
         font-size: 27px;
     }
+
+    .grid-row {
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 20px;
+        margin: 20px 0;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .relawan-detail {
+        display: grid;
+        grid-template-columns: 1fr;
+        margin: 50px 0;
+    }
+
+    .relawan-detail .img-detail {
+        margin-bottom: 15px;
+    }
+
+    .relawan-detail img {
+        width: 100%;
+        margin: 0;
+        align-items: center;
+    }
 }
 
 @media screen and (max-width: 540px) {
+    * {
+        font-size: 14px;
+    }
+
     .app-bar .app-bar__brand h1 {
         font-size: 24px;
+    }
+
+    .grid-row {
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+        margin: 20px 0;
+    }
+
+    .relawan-detail {
+        margin: 30px 0;
+    }
+
+    #mainContent h1 {
+        font-size: 24px;
+    }
+}
+
+@media screen and (max-width: 430px) {
+    .grid-row {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    * {
+        font-size: 12px;
+    }
+
+    #mainContent h1 {
+        font-size: 22px;
     }
 }
