--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -25,8 +25,6 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Hello</h1>
-    </main>
+    <main id="mainContent" class="container" tabindex="0"></main>
 </body>
 </html>
