--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Peduli Bencana merupakan website yang memberikan informasi dan layanan seputar bencana yang terjadi di Indonesia.">
-    <link rel="icon" href="favicon.png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Peduli Bencana merupakan website yang memberikan informasi dan layanan seputar bencana yang terjadi di Indonesia."
+    />
+    <link rel="icon" href="favicon.png" />
     <title>Peduli Bencana</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="app-bar">
-        <div class="app-bar__menu">
-            <button id="hamburgerButton" tabindex="0">☰</button>
-        </div>
-        <div class="app-bar__brand">
-            <h1 tabindex="0">Peduli Bencana</h1>
-        </div>
-        <nav id="navigationDrawer" class="app-bar__navigation">
-            <ul>
-                <li><a href="#/home">Home</a></li>
-                <li><a href="#/mitigasi">Mitigasi</a></li>
-                <li><a href="#/artikel">Artikel</a></li>
-                <li><a href="#/donasi">Donasi</a></li>
-                <li><a href="#/relawan">Relawan</a></li>
-            </ul>
-        </nav>
+      <div class="app-bar__menu">
+        <button id="hamburgerButton" tabindex="0">☰</button>
+      </div>
+      <div class="app-bar__brand">
+        <h1 tabindex="0">Peduli Bencana</h1>
+      </div>
+      <nav id="navigationDrawer" class="app-bar__navigation">
+        <ul>
+          <li><a href="#/home">Home</a></li>
+          <li><a href="#/mitigasi">Mitigasi</a></li>
+          <li><a href="#/artikel">Artikel</a></li>
+          <li><a href="#/donasi">Donasi</a></li>
+          <li><a href="#/relawan">Relawan</a></li>
+        </ul>
+      </nav>
     </header>
-    <main>
-        <h1>Hello</h1>
-    </main>
-</body>
+    <main id="mainContent" class="container" tabindex="0"></main>
+  </body>
 </html>
