--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -82,47 +82,13 @@ html {
     left: 0;
 }
 
-.container {
-    max-width: 90% !important;
-    padding-right: 0;
-    min-height: 500px;
-}
-
-.main-title {
-    font-size: 33px;
-    text-align: center;
-    margin: 30px 0;
-}
+/* Main Content */
 
 .card img {
     width: 100%;
     height: 170px;
     object-fit: cover;
     object-position: center;
-}
-
-.grid-row {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 20px;
-    margin: 20px 0;
-}
-
-.relawan-detail {
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-    margin: 50px 0;
-    min-width: 250px;
-}
-
-.relawan-detail img {
-    width: 90%;
-    margin: 0 10px;
-    align-items: center;
-}
-
-table {
-    text-align: left;
 }
 
 .btn {
@@ -139,16 +105,13 @@ table {
     margin-right: 0;
 }
 
-#main-content {
-    padding: 20px 0;
+/* Footer */
+
+footer{
+    background: #1C4966;
+    min-height: 75vh;
 }
 
-#main-content h1 {
-    font-size: 30px;
-    text-align: center;
-    padding: 5px;
-    margin-bottom: 15px;
-}
 
 @media screen and (max-width: 820px) {
     .app-bar {
@@ -192,36 +155,8 @@ table {
     .app-bar .app-bar__brand h1 {
         font-size: 27px;
     }
-
-    .grid-row {
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 20px;
-        margin: 20px 0;
-    }
-    .artikel-search{
-        grid-template-columns: 1fr 1fr;
-        gap: 20px;
-        margin: 20px 0;
-    }
 }
 
-@media screen and (max-width: 650px) {
-    .relawan-detail {
-        display: grid;
-        grid-template-columns: 1fr;
-        margin: 50px 0;
-    }
-
-    .relawan-detail .img-detail {
-        margin-bottom: 15px;
-    }
-
-    .relawan-detail img {
-        width: 100%;
-        margin: 0;
-        align-items: center;
-    }
-}
 
 @media screen and (max-width: 540px) {
     * {
@@ -232,30 +167,6 @@ table {
         font-size: 24px;
     }
 
-    .grid-row {
-        grid-template-columns: 1fr 1fr;
-        gap: 20px;
-        margin: 20px 0;
-    }
-
-    .relawan-detail {
-        margin: 30px 0;
-    }
-
-    #mainContent h1 {
-        font-size: 24px;
-    }
-}
-
-@media screen and (max-width: 430px) {
-    .grid-row {
-        grid-template-columns: 1fr;
-    }
-    .artikel-search{
-        grid-template-columns: 1fr;
-        gap: 20px;
-        margin: 20px 0;
-    }
 }
 
 @media screen and (max-width: 350px) {
