--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,178 +1,124 @@
-@import url("https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700&family=Open+Sans:wght@700&display=swap");
-@import "bootstrap/dist/css/bootstrap.min.css";
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700&family=Open+Sans:wght@700&display=swap');
+@import 'bootstrap/dist/css/bootstrap.min.css';
 
 * {
-  font-family: "Baloo 2", cursive, "Open Sans", sans-serif;
-  margin: 0;
-  padding: 0;
+    font-family: 'Baloo 2', cursive, 'Open Sans', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 html {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .app-bar {
-  padding: 8px 50px;
-  background-color: white;
-  display: grid;
-  grid-template-columns: 1fr auto;
-  gap: 10px;
-  position: sticky;
-  top: 0;
-  z-index: 99;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-  font-size: 18px;
-  min-width: 330px;
+    padding: 8px 50px;
+    background-color: white;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    gap: 10px;
+    position: sticky;
+    top: 0;
+    z-index: 99;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+    font-size: 18px;
+    min-width: 330px;
 }
 
 .app-bar .app-bar__menu {
-  display: none;
-  align-items: center;
+    display: none;
+    align-items: center;
 }
 
 .app-bar .app-bar__menu button {
-  background-color: transparent;
-  border: none;
-  font-size: 18px;
-  padding: 10px 15px;
-  cursor: pointer;
+    background-color: transparent;
+    border: none;
+    font-size: 18px;
+    padding: 10px 15px;
+    cursor: pointer;
 }
 
 .app-bar .app-bar__brand {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .app-bar .app-bar__brand h1 {
-  color: #1c4966;
-  text-transform: uppercase;
-  font-size: 22px;
-  user-select: none;
-  font-size: 1.5em;
-  margin-bottom: 0;
+    color: #1C4966;
+    text-transform: uppercase;
+    font-size: 22px;
+    user-select: none;
+    font-size: 1.5em;
+    margin-bottom: 0;
 }
 
 .app-bar .app-bar__navigation {
-  position: static;
-  top: 50px;
-  left: -180px;
-  transition: all 0.3s;
-  background-color: white;
-  overflow: hidden;
+    position: static;
+    top: 50px;
+    left: -180px;
+    transition: all 0.3s;
+    background-color: white;
+    overflow: hidden;
 }
 
 .app-bar .app-bar__navigation ul {
-  margin: 5px 0;
-  padding-left: 10px;
+    margin: 5px 0;
+    padding-left: 10px;
 }
 
 .app-bar .app-bar__navigation ul li {
-  display: inline-block;
+    display: inline-block;
 }
 
 .app-bar .app-bar__navigation ul li a {
-  display: inline-block;
-  text-decoration: none;
-  color: black;
-  padding: 10px 20px;
-  margin: 0;
+    display: inline-block;
+    text-decoration: none;
+    color: black;
+    padding: 10px 20px;
+    margin: 0;
 }
 
 .app-bar .app-bar__navigation.open {
-  left: 0;
+    left: 0;
+}
+
+body {
+    background-color: #ecebeb;
 }
 
 .container {
     max-width: 90% !important;
-    padding-right: 0;
+    padding: 0;
     min-height: 500px;
 }
 
 .main-title {
-  font-size: 33px;
-  text-align: center;
-  margin: 30px 0;
+    font-size: 33px;
+    text-align: center;
+    margin: 30px 0;
 }
 
-#main-content {
-  padding: 20px 0;
+table {
+    text-align: left;
 }
 
-#main-content h1 {
-  font-size: 30px;
-  text-align: center;
-  padding: 5px;
-  margin-bottom: 15px;
-}
-
-<<<<<<< Updated upstream
-@media screen and (max-width: 820px) {
-  .app-bar {
-    padding: 8px 35px;
-  }
-=======
-.relawan-detail {
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-    margin: 50px 0;
-    min-width: 250px;
->>>>>>> Stashed changes
-}
-
-@media screen and (max-width: 790px) {
-  .app-bar {
-    grid-template-columns: auto 1fr auto;
-    padding: 8px 16px;
-  }
-
-  .app-bar .app-bar__menu {
-    display: flex;
-  }
-
-  .app-bar .app-bar__navigation {
-    position: absolute;
-    top: 66px;
-    box-shadow: 4px 4px 4px #dfdfdf;
-  }
-
-  .app-bar .app-bar__navigation ul {
-    padding: 0 10px;
-  }
-
-<<<<<<< Updated upstream
-  .app-bar .app-bar__navigation ul li {
-    display: block;
-  }
-
-  .app-bar .app-bar__navigation ul li a {
-    display: inline-block;
+.btn {
     width: 100%;
-=======
+    background-color: #1C4966;
+    color: white;
+}
+
 #main-content {
     padding: 20px 0;
 }
 
 #main-content h1 {
     font-size: 30px;
->>>>>>> Stashed changes
     text-align: center;
-    margin-bottom: 10px;
-    padding: 10px 30px;
-    font-size: 17px;
-  }
-
-<<<<<<< Updated upstream
-  .app-bar .app-bar__brand h1 {
-    font-size: 27px;
-  }
+    padding: 5px;
+    margin-bottom: 15px;
 }
 
-@media screen and (max-width: 540px) {
-  .app-bar .app-bar__brand h1 {
-    font-size: 24px;
-  }
-}
-=======
 @media screen and (max-width: 820px) {
     .app-bar {
         padding: 8px 35px;
@@ -215,30 +161,6 @@ html {
     .app-bar .app-bar__brand h1 {
         font-size: 27px;
     }
-
-    .grid-row {
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 20px;
-        margin: 20px 0;
-    }
-}
-
-@media screen and (max-width: 650px) {
-    .relawan-detail {
-        display: grid;
-        grid-template-columns: 1fr;
-        margin: 50px 0;
-    }
-
-    .relawan-detail .img-detail {
-        margin-bottom: 15px;
-    }
-
-    .relawan-detail img {
-        width: 100%;
-        margin: 0;
-        align-items: center;
-    }
 }
 
 @media screen and (max-width: 540px) {
@@ -250,24 +172,8 @@ html {
         font-size: 24px;
     }
 
-    .grid-row {
-        grid-template-columns: 1fr 1fr;
-        gap: 20px;
-        margin: 20px 0;
-    }
-
-    .relawan-detail {
-        margin: 30px 0;
-    }
-
     #mainContent h1 {
         font-size: 24px;
-    }
-}
-
-@media screen and (max-width: 430px) {
-    .grid-row {
-        grid-template-columns: 1fr;
     }
 }
 
@@ -280,4 +186,3 @@ html {
         font-size: 22px;
     }
 }
->>>>>>> Stashed changes
