--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -36,37 +36,34 @@
                         <img src="favicon.png" alt="" style="height: 30px; margin-right: 2px;">
                         <h5 class="text-uppercase  font-weight-bold" style="color: white; font-size: 27px;">PEDULI BENCANA</h5>
                     </div>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae, ipsum quaerat. Mollitia repellat aspernatur maiores atque alias eveniet saepe consequatur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate, officia repellendus cumque in voluptatem molestiae.</p>
+                    <p>Peduli Bencana merupakan website yang memberikan informasi dan layanan yang berkaitan dengan bencana yang terjadi di Indonesia. Di dalam website ini terdapat beberapa fitur diantaranya yaitu mitigasi, artikel, donasi, dan relawan.</p>
                 </div>
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                     <h5 class="text-uppercase mb-4 font-weight-bold" style="color: white; font-size: 30px;">Service</h5>
-                    <p><a href="#" class="text-white" style="text-decoration: none;">Home</a>
-                    <p><a href="#" class="text-white" style="text-decoration: none;">Mitigasi</a></p>
-                    <p><a href="#" class="text-white" style="text-decoration: none;">Artikel</a></p>
-                    <p><a href="#" class="text-white" style="text-decoration: none;">Donasi</a></p>
-                    <p><a href="#" class="text-white" style="text-decoration: none;">Relawan</a></p>
+                    <p><a href="#Mitigasi" class="text-white" style="text-decoration: none;">Mitigasi</a></p>
+                    <p><a href="#artikel" class="text-white" style="text-decoration: none;">Artikel</a></p>
+                    <p><a href="#Donasi" class="text-white" style="text-decoration: none;">Donasi</a></p>
+                    <p><a href="#Relawan" class="text-white" style="text-decoration: none;">Relawan</a></p>
                 </div>
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
                     <h5 class="text-uppercase mb-4 font-weight-bold" style="color: white; font-size: 30px;">Link Terkait</h5>
                     <p><a href="https://www.detik.com/" class="text-white" style="text-decoration: none;">Informasi detikcom</a>
-                    <p><a href="https://terkini.id/" class="text-white" style="text-decoration: none;">Informasi Terkini</a></p>
-                    <p><a href="https://www.sindonews.com/" class="text-white" style="text-decoration: none;">Informasi sindonews</a></p>
-                    <p><a href="https://www.suara.com/news" class="text-white" style="text-decoration: none;">Informasi suara</a></p>
-                    <p><a href="https://www.kompas.com/" class="text-white" style="text-decoration: none;">Informasi kompas</a></p>
+                    <p><a href="https://www.tempo.co" class="text-white" style="text-decoration: none;">Informasi Tempo</a></p>
+                    <p><a href="https://www.liputan6.com/" class="text-white" style="text-decoration: none;">Informasi liputan6</a></p>
                 </div>
                 <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                     <h5 class="text-uppercase mb-4 font-weight-bold" style="color: white; font-size: 30px;">Contact</h5>
                     <p>
-                        <i class="fab fa-github" style="margin: 7px;"></i>Peduli-bencana-app
+                        <i class="fab fa-instagram" style="margin: 7px;"></i>instagram anggi
                     </p>
                     <p>
-                        <i class="fab fa-youtube" style="margin: 7px;"></i>Peduli bencana
+                        <i class="fab fa-instagram" style="margin: 7px;"></i>instagram misha
                     </p>
                     <p>
-                        <i class="fab fa-instagram" style="margin: 7px;"></i>PeduliBencana
+                        <i class="fab fa-instagram" style="margin: 7px;"></i>instagram annisya
                     </p>
                     <p>
-                        <i class="fab fa-twitter" style="margin: 7px;"></i>PeduliBencana
+                        <i class="fab fa-instagram" style="margin: 7px;"></i>instagram isti
                     </p>
                 </div>
             </div>
