--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -74,12 +74,18 @@ html {
     display: inline-block;
     text-decoration: none;
     color: black;
-    padding: 10px 20px;
+    padding: 10px 15px;
     margin: 0;
 }
 
 .app-bar .app-bar__navigation.open {
     left: 0;
+}
+
+.container {
+    max-width: 90% !important;
+    padding: 0;
+    min-height: 500px;
 }
 
 .main-title {
@@ -88,15 +94,20 @@ html {
     margin: 30px 0;
 }
 
-#main-content{
+#main-content {
     padding: 20px 0;
 }
 
-#main-content h1{
+#main-content h1 {
     font-size: 30px;
     text-align: center;
     padding: 5px;
     margin-bottom: 15px;
+}
+
+.btn {
+    background-color: #1C4966;
+    color: white;
 }
 
 @media screen and (max-width: 820px) {
@@ -105,7 +116,7 @@ html {
     }
 }
 
-@media screen and (max-width: 790px) {
+@media screen and (max-width: 910px) {
     .app-bar {
         grid-template-columns: auto 1fr auto;
         padding: 8px 16px;
@@ -144,7 +155,25 @@ html {
 }
 
 @media screen and (max-width: 540px) {
+    * {
+        font-size: 14px;
+    }
+
     .app-bar .app-bar__brand h1 {
         font-size: 24px;
+    }
+
+    #mainContent h1 {
+        font-size: 24px;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    * {
+        font-size: 12px;
+    }
+
+    #mainContent h1 {
+        font-size: 22px;
     }
 }
