Memperbaiki index html
Memperbaiki index html.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -23,6 +23,7 @@
                 <li><a href="#/artikel">Artikel</a></li>
                 <li><a href="#/donasi">Donasi</a></li>
                 <li><a href="#/relawan">Relawan</a></li>
+                <li><a href="#/tentang-kami">Tentang Kami</a></li>
             </ul>
         </nav>
     </header>
