--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -110,6 +110,12 @@ html {
     color: white;
 }
 
+.btn-logout, .btn-login {
+    background-color: #dfdfdf;
+    color: black;
+    border-radius: 20px;
+}
+
 @media screen and (max-width: 820px) {
     .app-bar {
         padding: 8px 35px;
