--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -17,12 +17,12 @@
         </div>
         <nav id="navigationDrawer" class="app-bar__navigation">
             <ul>
-                <li><a href="#/home">Home</a></li>
                 <li><a href="#/mitigasi">Mitigasi</a></li>
                 <li><a href="#/artikel">Artikel</a></li>
                 <li><a href="#/donasi-postingan">Donasi</a></li>
                 <li><a href="#/relawan">Relawan</a></li>
                 <li><a href="#/tentang-kami">Tentang Kami</a></li>
+                <li><a href="#/login" class="btn btn-login">Login</a></li>
             </ul>
         </nav>
     </header>
