--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -45,11 +45,10 @@ html {
 
 .app-bar .app-bar__brand h1 {
     color: #1C4966;
-    text-transform: uppercase;
     font-size: 22px;
     user-select: none;
     font-size: 1.5em;
-    margin-bottom: 0;
+    margin: 0;
 }
 
 .app-bar .app-bar__navigation {
@@ -111,7 +110,7 @@ html {
 }
 
 .btn-logout, .btn-login {
-    background-color: #dfdfdf;
+    background-color: #dfdfdf !important;
     color: black;
     border-radius: 20px;
 }
