Merapihkan fitur artikel & Menambahkan fitur Home
1. Merapihkan Tampilan fitur artikel & footer
2. Membuat fitur home

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -29,46 +29,52 @@
     </header>
     <main id="mainContent" class="container" tabindex="0"></main>
 
-    <footer class="text-white pt-5 pb-4">
+    <footer style="color: whitesmoke;">
         <div class="container text-center text-md-left">
             <div class="row text-center text-md-left">
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <div style="display: flex; margin-bottom: 10px;">
-                        <img src="favicon.png" alt="" style="height: 30px; margin-right: 2px;">
-                        <h5 class="text-uppercase  font-weight-bold" style="color: white; font-size: 27px;">PEDULI BENCANA</h5>
+                    <div style= "margin-bottom: 10px;">
+                       <!--<img src="favicon.png" alt="" style="height: 30px; margin-right: 2px;">-->
+                        <h5 class="text-uppercase  font-weight-bold" style="color: whitesmoke;">PEDULI BENCANA</h5>
                     </div>
                     <p>Peduli Bencana merupakan website yang memberikan informasi dan layanan yang berkaitan dengan bencana yang terjadi di Indonesia. Di dalam website ini terdapat beberapa fitur diantaranya yaitu mitigasi, artikel, donasi, dan relawan.</p>
                 </div>
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold" style="color: white; font-size: 30px;">Service</h5>
-                    <p><a href="#Mitigasi" class="text-white" style="text-decoration: none;">Mitigasi</a></p>
-                    <p><a href="#artikel" class="text-white" style="text-decoration: none;">Artikel</a></p>
-                    <p><a href="#Donasi" class="text-white" style="text-decoration: none;">Donasi</a></p>
-                    <p><a href="#Relawan" class="text-white" style="text-decoration: none;">Relawan</a></p>
+                    <h5 class="text-uppercase mb-3 font-weight-bold" style="color: whitesmoke;">Service</h5>
+                    <p><a href="#mitigasi"  style="text-decoration: none; color: whitesmoke;">Mitigasi</a></p>
+                    <p><a href="#artikel"  style="text-decoration: none; color: whitesmoke;">Artikel</a></p>
+                    <p><a href="#donasi"  style="text-decoration: none;  color: whitesmoke;">Donasi</a></p>
+                    <p><a href="#relawan"  style="text-decoration: none; color: whitesmoke;">Relawan</a></p>
+                    <p><a href="#aboutUs"  style="text-decoration: none; color: whitesmoke;">About Us</a></p>
                 </div>
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold" style="color: white; font-size: 30px;">Link Terkait</h5>
-                    <p><a href="https://www.detik.com/" class="text-white" style="text-decoration: none;">Informasi detikcom</a>
-                    <p><a href="https://www.tempo.co" class="text-white" style="text-decoration: none;">Informasi Tempo</a></p>
-                    <p><a href="https://www.liputan6.com/" class="text-white" style="text-decoration: none;">Informasi liputan6</a></p>
+                    <h5 class="text-uppercase mb-3 font-weight-bold" style="color: whitesmoke;">Link Terkait</h5>
+                    <p><a href="https://www.detik.com/"  style="text-decoration: none; color: whitesmoke;">Informasi detikcom</a>
+                    <p><a href="https://www.tempo.co"  style="text-decoration: none; color: whitesmoke;">Informasi Tempo</a></p>
+                    <p><a href="https://www.liputan6.com/"  style="text-decoration: none; color: whitesmoke;">Informasi liputan6</a></p>
+                    <p><a href="https://www.viva.co.id"  style="text-decoration: none; color: whitesmoke;">Informasi Viva</a></p>
                 </div>
                 <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold" style="color: white; font-size: 30px;">Contact</h5>
+                    <h5 class="text-uppercase mb-3 font-weight-bold" style="color: whitesmoke;">Contact</h5>
                     <p>
-                        <i class="fab fa-instagram" style="margin: 7px;"></i>instagram anggi
+                        <i class="fab fa-instagram" style="margin: 7px;"></i>
+                        <a href="https://instagram.com/anggi.azahraa?igshid=YmMyMTA2M2Y=" style="text-decoration: none; color: whitesmoke;">anggi.azahraa</a>
                     </p>
                     <p>
-                        <i class="fab fa-instagram" style="margin: 7px;"></i>instagram misha
+                        <i class="fab fa-instagram" style="margin: 7px;"></i>
+                        <a href="https://instagram.com/misha.maya7?igshid=YmMyMTA2M2Y=" style="text-decoration: none; color: whitesmoke;">misha.maya7</a>
                     </p>
                     <p>
-                        <i class="fab fa-instagram" style="margin: 7px;"></i>instagram annisya
+                        <i class="fab fa-instagram" style="margin: 7px;"></i>
+                        <a href="https://www.instagram.com/invites/contact/?i=unsew52bojj3&utm_content=1z395jq" style="text-decoration: none; color: whitesmoke;">annisya2400</a>
                     </p>
                     <p>
-                        <i class="fab fa-instagram" style="margin: 7px;"></i>instagram isti
+                        <i class="fab fa-instagram" style="margin: 7px;"></i>
+                        <a href="https://instagram.com/isti.ajhh?igshid=YmMyMTA2M2Y=" style="text-decoration: none; color: whitesmoke;">isti.ajhh</a>
                     </p>
                 </div>
             </div>
-            <hr class="mb-4">
+            <hr class="mb-2">
             <div class="row align-items-center">
                 <div class="col-md-0 col-lg-12">
                     <p>Copyright © 2021 PeduliBencana</p>
