--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -49,6 +49,7 @@ html {
     font-size: 22px;
     user-select: none;
     font-size: 1.5em;
+    margin-top: 0;
     margin-bottom: 0;
 }
 
@@ -109,16 +110,19 @@ html {
 
 footer{
     background: #1C4966;
+    min-height: 30vh;
+    color: white;
+    padding-top: 3px;
+    padding-bottom: 2px;
+    box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.2);
+}
+footer p{
+    color: whitesmoke;
+    margin: 3px;
 }
 
 
 @media screen and (max-width: 820px) {
-    .app-bar {
-        padding: 8px 35px;
-    }
-}
-
-@media screen and (max-width: 790px) {
     .app-bar {
         grid-template-columns: auto 1fr auto;
         padding: 8px 16px;
@@ -154,6 +158,9 @@ footer{
     .app-bar .app-bar__brand h1 {
         font-size: 27px;
     }
+    footer p{
+        font-size: 15px;
+    }
 }
 
 
@@ -165,7 +172,9 @@ footer{
     .app-bar .app-bar__brand h1 {
         font-size: 24px;
     }
-
+    footer p{
+        font-size: 10px;
+    }
 }
 
 @media screen and (max-width: 350px) {
