--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -93,7 +93,8 @@ html {
 }
 
 .btn {
-    min-width: 10%;
+    min-width: 44px;
+    max-height: 44px;
     background-color: #1C4966;
     color: white;
 }
