--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -90,7 +90,6 @@ html {
 .main-title {
     font-size: 33px;
     text-align: center;
-    margin: 30px 0;
 }
 
 #main-content {
@@ -98,14 +97,14 @@ html {
 }
 
 #main-content h1 {
-    font-size: 30px;
+    font-size: 24px;
     text-align: center;
     padding: 5px;
     margin-bottom: 15px;
 }
 
 .btn {
-    background-color: #1C4966;
+    background-color: #0353A0;
     color: white;
 }
 
@@ -113,6 +112,11 @@ html {
     background-color: #dfdfdf !important;
     color: black;
     border-radius: 20px;
+    margin-bottom: 0;
+}
+
+.swal-text {
+    text-align: center;
 }
 
 @media screen and (max-width: 820px) {
