--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -29,7 +29,7 @@
     </header>
     <main id="mainContent" class="container" tabindex="0"></main>
 
-    <footer style="color: whitesmoke;">
+    <footer style="color: whitesmoke; background-color: #1C4966;">
         <div class="container text-center text-md-left">
             <div class="row text-center text-md-left">
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
