Memperbaiki Tampilan Fitur Artikel
Berikut beberapa hal yang dilakukan:
1. Mengubah alert menggunakan library sweet alert
2. Menambahkan hero image disetiap halaman fitur relawan
3. Menerapkan clean code pada fitur relawan

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -99,7 +99,8 @@ html {
     background-color: #dfdfdf !important;
     color: black;
     border-radius: 20px;
-    margin-bottom: 0;
+    margin: 0;
+    margin-bottom: 10px;
 }
 
 .swal-text {
@@ -147,6 +148,10 @@ html {
 
     .app-bar .app-bar__brand h1 {
         font-size: 27px;
+    }
+
+    .btn-logout, .btn-login {
+        margin: 0 20%;
     }
 }
 
