--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -34,13 +34,12 @@
             <div class="row text-center text-md-left">
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                     <div style= "margin-bottom: 10px;">
-                       <!--<img src="favicon.png" alt="" style="height: 30px; margin-right: 2px;">-->
-                        <h5 class="text-uppercase  font-weight-bold" style="color: whitesmoke;">PEDULI BENCANA</h5>
+                        <h5 class="font-weight-bold" style="color: whitesmoke;" tabindex="0">Peduli Bencana</h5>
                     </div>
-                    <p>Peduli Bencana merupakan website yang memberikan informasi dan layanan yang berkaitan dengan bencana yang terjadi di Indonesia. Di dalam website ini terdapat beberapa fitur diantaranya yaitu mitigasi, artikel, donasi, dan relawan.</p>
+                    <p tabindex="0">Peduli Bencana merupakan website yang memberikan informasi dan layanan yang berkaitan dengan bencana yang terjadi di Indonesia. Di dalam website ini terdapat beberapa fitur diantaranya yaitu mitigasi, artikel, donasi, dan relawan.</p>
                 </div>
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-3 font-weight-bold" style="color: whitesmoke;">Service</h5>
+                    <h5 class="text-uppercase mb-3 font-weight-bold" style="color: whitesmoke;" tabindex="0">Service</h5>
                     <p><a href="#mitigasi"  style="text-decoration: none; color: whitesmoke;">Mitigasi</a></p>
                     <p><a href="#artikel"  style="text-decoration: none; color: whitesmoke;">Artikel</a></p>
                     <p><a href="#donasi"  style="text-decoration: none;  color: whitesmoke;">Donasi</a></p>
@@ -48,14 +47,14 @@
                     <p><a href="#aboutUs"  style="text-decoration: none; color: whitesmoke;">About Us</a></p>
                 </div>
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-3 font-weight-bold" style="color: whitesmoke;">Link Terkait</h5>
+                    <h5 class="text-uppercase mb-3 font-weight-bold" style="color: whitesmoke;" tabindex="0">Link Terkait</h5>
                     <p><a href="https://www.detik.com/"  style="text-decoration: none; color: whitesmoke;">Informasi detikcom</a>
                     <p><a href="https://www.tempo.co"  style="text-decoration: none; color: whitesmoke;">Informasi Tempo</a></p>
                     <p><a href="https://www.liputan6.com/"  style="text-decoration: none; color: whitesmoke;">Informasi liputan6</a></p>
                     <p><a href="https://www.viva.co.id"  style="text-decoration: none; color: whitesmoke;">Informasi Viva</a></p>
                 </div>
                 <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-3 font-weight-bold" style="color: whitesmoke;">Contact</h5>
+                    <h5 class="text-uppercase mb-3 font-weight-bold" style="color: whitesmoke;" tabindex="0">Contact</h5>
                     <p>
                         <i class="fab fa-instagram" style="margin: 7px;"></i>
                         <a href="https://instagram.com/anggi.azahraa?igshid=YmMyMTA2M2Y=" style="text-decoration: none; color: whitesmoke;">anggi.azahraa</a>
@@ -77,7 +76,7 @@
             <hr class="mb-2">
             <div class="row align-items-center">
                 <div class="col-md-0 col-lg-12">
-                    <p>Copyright © 2021 PeduliBencana</p>
+                    <p tabindex="0">Copyright © 2021 PeduliBencana</p>
                 </div>
             </div>
         </div>
