--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -29,47 +29,47 @@
     </header>
     <main id="mainContent" class="container" tabindex="0"></main>
 
-    <footer style="color: whitesmoke; background-color: #1C4966;">
+    <footer>
         <div class="container text-center text-md-left">
             <div class="row text-center text-md-left">
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                     <div style= "margin-bottom: 10px;">
-                        <h5 class="font-weight-bold" style="color: whitesmoke;" tabindex="0">Peduli Bencana</h5>
+                        <h5 class="font-weight-bold" tabindex="0">Peduli Bencana</h5>
                     </div>
                     <p tabindex="0">Peduli Bencana merupakan website yang memberikan informasi dan layanan yang berkaitan dengan bencana yang terjadi di Indonesia. Di dalam website ini terdapat beberapa fitur diantaranya yaitu mitigasi, artikel, donasi, dan relawan.</p>
                 </div>
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-3 font-weight-bold" style="color: whitesmoke;" tabindex="0">Service</h5>
-                    <p><a href="#mitigasi"  style="text-decoration: none; color: whitesmoke;">Mitigasi</a></p>
-                    <p><a href="#artikel"  style="text-decoration: none; color: whitesmoke;">Artikel</a></p>
-                    <p><a href="#donasi"  style="text-decoration: none;  color: whitesmoke;">Donasi</a></p>
-                    <p><a href="#relawan"  style="text-decoration: none; color: whitesmoke;">Relawan</a></p>
-                    <p><a href="#aboutUs"  style="text-decoration: none; color: whitesmoke;">About Us</a></p>
+                    <h5 class="text-uppercase mb-3 font-weight-bold" tabindex="0">Service</h5>
+                    <p><a href="#mitigasi">Mitigasi</a></p>
+                    <p><a href="#artikel">Artikel</a></p>
+                    <p><a href="#donasi">Donasi</a></p>
+                    <p><a href="#relawan">Relawan</a></p>
+                    <p><a href="#aboutUs">About Us</a></p>
                 </div>
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-3 font-weight-bold" style="color: whitesmoke;" tabindex="0">Link Terkait</h5>
-                    <p><a href="https://www.detik.com/"  style="text-decoration: none; color: whitesmoke;">Informasi detikcom</a>
-                    <p><a href="https://www.tempo.co"  style="text-decoration: none; color: whitesmoke;">Informasi Tempo</a></p>
-                    <p><a href="https://www.liputan6.com/"  style="text-decoration: none; color: whitesmoke;">Informasi liputan6</a></p>
-                    <p><a href="https://www.viva.co.id"  style="text-decoration: none; color: whitesmoke;">Informasi Viva</a></p>
+                    <h5 class="text-uppercase mb-3 font-weight-bold"  tabindex="0">Link Terkait</h5>
+                    <p><a href="https://www.detik.com/">Informasi detikcom</a>
+                    <p><a href="https://www.tempo.co">Informasi Tempo</a></p>
+                    <p><a href="https://www.liputan6.com/">Informasi liputan6</a></p>
+                    <p><a href="https://www.viva.co.id">Informasi Viva</a></p>
                 </div>
                 <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-3 font-weight-bold" style="color: whitesmoke;" tabindex="0">Contact</h5>
+                    <h5 class="text-uppercase mb-3 font-weight-bold" tabindex="0">Contact</h5>
                     <p>
-                        <i class="fab fa-instagram" style="margin: 7px;"></i>
-                        <a href="https://instagram.com/anggi.azahraa?igshid=YmMyMTA2M2Y=" style="text-decoration: none; color: whitesmoke;">anggi.azahraa</a>
+                        <i class="fab fa-instagram"></i>
+                        <a href="https://instagram.com/anggi.azahraa?igshid=YmMyMTA2M2Y=">anggi.azahraa</a>
                     </p>
                     <p>
-                        <i class="fab fa-instagram" style="margin: 7px;"></i>
-                        <a href="https://instagram.com/misha.maya7?igshid=YmMyMTA2M2Y=" style="text-decoration: none; color: whitesmoke;">misha.maya7</a>
+                        <i class="fab fa-instagram"></i>
+                        <a href="https://instagram.com/misha.maya7?igshid=YmMyMTA2M2Y=">misha.maya7</a>
                     </p>
                     <p>
-                        <i class="fab fa-instagram" style="margin: 7px;"></i>
-                        <a href="https://www.instagram.com/invites/contact/?i=unsew52bojj3&utm_content=1z395jq" style="text-decoration: none; color: whitesmoke;">annisya2400</a>
+                        <i class="fab fa-instagram"></i>
+                        <a href="https://www.instagram.com/invites/contact/?i=unsew52bojj3&utm_content=1z395jq">annisya2400</a>
                     </p>
                     <p>
-                        <i class="fab fa-instagram" style="margin: 7px;"></i>
-                        <a href="https://instagram.com/isti.ajhh?igshid=YmMyMTA2M2Y=" style="text-decoration: none; color: whitesmoke;">isti.ajhh</a>
+                        <i class="fab fa-instagram"></i>
+                        <a href="https://instagram.com/isti.ajhh?igshid=YmMyMTA2M2Y=">isti.ajhh</a>
                     </p>
                 </div>
             </div>
